--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -419,10 +419,12 @@ body {
 #loginpanel, #createpanel, #resetpanel, #tokenpanel, #resettokenpanel, #resetpasswordpanel, #resetpasswordpanel, #checkemailpanel, #waitpushpanel {
     display: inline-block;
     margin: 0;
-    background-color: #979797;
-    border-radius: 16px;
-    width: 300px;
-    padding: 16px;
+    background-color: #fff;
+    border-top: 5px solid #1a61a8;
+    border-radius: 5px;
+    max-width: 400px;
+    width: 100%;
+    padding: 30px;
     text-align: center;
     color: black;
 }
@@ -463,6 +465,48 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     -ms-grid-row: 4;
+}
+
+.logintxt {
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+    background-clip: text;
+    margin-bottom: 20px;
+    -webkit-background-clip: text;
+}
+.logintxt1{
+    margin-bottom: 20px;
+    text-align: justify;
+    line-height: 20px;
+}
+.inputLabel{
+    display: flex;
+    color: #868686;
+}
+
+.logininput {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 0;
+    border-radius:4px;
+    box-sizing: border-box;
+    background-color:#e8f0fd;
+}
+
+.loginbtn {
+    width: 100%;
+    padding: 12px 20px;
+    border: 0;
+    border-radius:4px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+
+.loginbtn:hover{
+    background-color:#e8f0fd;
 }
 
 /* Support for footer made with table */
