--- a/views/login2.handlebars
+++ b/views/login2.handlebars
@@ -68,6 +68,7 @@
                         {{{title2}}}
                     </sup>
                 </div>
+                {{!-- login panel --}}
                 <div id=loginpanel style="display:none;">
                     <form id=loginpanelform method=post>
                         <input type=hidden name=action value=login />
@@ -125,37 +126,50 @@
                         </div>
                     </form>
                 </div>
+{{!-- create panel --}}
                 <div id=createpanel style="display:none;position:relative">
                     <form id=createpanelform method=post>
                         <input type=hidden name=action value=createaccount />
                         <div id=message2></div>
-                        <div>
-                            <b>Account Creation</b>
+                        <div style="margin-bottom: 20px;">
+                            <b style="font-size: 25px;">Account Creation</b>
                         </div>
                         <div id="passwordPolicyCallout" style="display:none"></div>
-                        <table>
+                        <table class="createTable">
                             <tr id="nuUserRow">
-                                <td id="nuUser" align=right width=100>Username:</td>
-                                <td><input id=ausername type=text {{{autocomplete}}}="username" name=username onchange=validateCreate(1) maxlength=64 onkeydown=haltReturn(event) onkeyup=validateCreate(1,event) /></td>
+                                {{!-- <td  align=right width=100>Username:</td> --}}
+                                
+                                <td>
+                                    <label id="nuUser" for="ausername" class="inputLabel">User Name</label>
+                                    <input id=ausername class="logininput" type=text {{{autocomplete}}}="username" name=username onchange=validateCreate(1) maxlength=64 onkeydown=haltReturn(event) onkeyup=validateCreate(1,event) />
+                                    </td>
                             </tr>
                             <tr>
-                                <td id="nuEmail" align=right width=100>Email:</td>
-                                <td><input id=aemail type=text {{{autocomplete}}}="email" inputmode="email" name=email onchange=validateCreate(2) maxlength=256 onkeydown=haltReturn(event) onkeyup=validateCreate(2,event) /></td>
+                                {{!-- <td id="nuEmail" align=right width=100>Email:</td> --}}
+                                
+                                <td>
+                                    <label id="nuEmail" for="aemail" class="inputLabel">Email</label>
+                                    <input id=aemail class="logininput" type=text {{{autocomplete}}}="email" inputmode="email" name=email onchange=validateCreate(2) maxlength=256 onkeydown=haltReturn(event) onkeyup=validateCreate(2,event) />
+                                    </td>
                             </tr>
                             <tr>
-                                <td id="nuPass1" align=right>Password:</td>
-                                <td><input id=apassword1 type=password name=password1 {{{autocomplete}}}="new-password" maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(3,event) onkeyup=validateCreate(3,event) /></td>
+                                {{!-- <td id="nuPass1" align=right>Password:</td> --}}
+                                <td>
+                                    <label id="nuPass1" for="apassword1" class="inputLabel">Password</label>
+                                    <input id=apassword1 class="logininput" type=password name=password1 {{{autocomplete}}}="new-password" maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(3,event) onkeyup=validateCreate(3,event) /></td>
                             </tr>
                             <tr>
-                                <td id="nuPass2" align=right>Password:</td>
-                                <td><input id=apassword2 type=password name=password2 {{{autocomplete}}}="new-password" maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(4,event) onkeyup=validateCreate(4,event) /></td>
+                                {{!-- <td id="nuPass2" align=right>Password:</td> --}}
+                                <td>
+                                    <label id="nuPass2" for="apassword2" class="inputLabel">Confirm Password</label>
+                                    <input id=apassword2 class="logininput" type=password name=password2 {{{autocomplete}}}="new-password" maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(4,event) onkeyup=validateCreate(4,event) /></td>
                             </tr>
                             <tr id="createPanelHint" style="display:none">
                                 <td id="nuHint" align=right>Password Hint:</td>
-                                <td><input id=apasswordhint type=text name=apasswordhint {{{autocomplete}}}=off maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(5,event) onkeyup=validateCreate(5,event) /></td>
+                                <td><input id=apasswordhint class="logininput" type=text name=apasswordhint {{{autocomplete}}}=off maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(5,event) onkeyup=validateCreate(5,event) /></td>
                             </tr>
                             <tr id=newAccountPass title="Enter the account creation token">
-                                <td id="nuToken" align=right>Creation Token:</td>
+                                <td id="nuToken" class="logininput" align=right>Creation Token:</td>
                                 <td><input id=anewaccountpass type=password name=anewaccountpass {{{autocomplete}}}=off maxlength=256 onkeydown=haltReturn(event) onchange=validateCreate(6,event) onkeyup=validateCreate(6,event) /></td>
                             </tr>
                             <tr id=newAccountCaptchaImg title="CAPTCHA image">
@@ -168,7 +182,7 @@
                             </tr>
                             <tr>
                                 <td colspan=2>
-                                    <div style=float:right><input id=createButton type="button" onclick="submitButtonClicked('createpanelform')" value="Create Account" disabled="disabled" /></div>
+                                    <div><input id=createButton class="loginbtn" type="button" onclick="submitButtonClicked('createpanelform')" value="Create Account" disabled="disabled" /></div>
                                     <div id=passWarning style="padding-top:6px"></div>
                                 </td>
                             </tr>
@@ -178,6 +192,7 @@
                         <input id=createformcaptcha name="captchaargs" type="hidden" value="{{{newAccountCaptcha}}}" />
                     </form>
                 </div>
+
                 <div id=resetpanel style="display:none">
                     <form id=resetpanelform method=post>
                         <input type=hidden name=action value=resetaccount />
